Fix another flaky test based on random types that require more setup